--- a/src/containers/feed/feed.css
+++ b/src/containers/feed/feed.css
@@ -22,23 +22,33 @@
 
 .sort-container{
     position: absolute;
-    top: 5%;
-    right: 10%;
     width: 200px;
     height: 39px;
+    top: 5%;
+    right: 10%;
     color: #000;
     display: flex;
     flex-direction: row;
-    
-
+ }
+ .sort-container span{
+    flex-shrink: 0; 
+    color: #000;
+    font-family: Montserrat;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
  }
  #sort-btn{
+    margin-top: 10px;
     width: 216px;
     height: 39px;
     flex-shrink: 0;
     border-radius: 10px;
     background: #D9D9D9;        
  }
+
+ /* FILTER CSS */
  #filter-btn-off{
     position: fixed;
     left: 0;
@@ -50,19 +60,62 @@
     width: 44px; /* Set the width of the image */
     height: 145px;
 }
+#filter-btn-on{
+    position: fixed;
+    left: 21.5%;
+    top:20%;
+ }
 
 .filter-containter{
     z-index: 1;
     position: fixed;
     bottom: 0;
-    width: 271px;
-    height: 850px;
+    width: 280px;
+    height: 867px;
     max-height: 100%;
     border-right: 2px solid #000;
-    background: #93C398;    
+    background: #93C398;   
 }
-#filter-btn-on{
-    position: fixed;
-    left: 21%;
-    top:20%;
- }
+
+.filter-wrapper{
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    top: 10%;
+
+}
+
+.search-container{
+    border-radius: 20px;
+    border: 1px solid #000;
+    background: #FCFFFB;
+    width: 220px;
+    height: 145px;
+    flex-shrink: 0;
+    margin: 20px 20px;
+   
+}
+
+#search-bar{
+    position: relative;
+    border-radius: 20px;
+    border: 2px solid #000;
+    background: #FFF;
+    width: 188px;
+    height: 31.5px;
+    flex-shrink: 0; 
+    top: 10%;
+    display: flex;
+    justify-content: center;
+}
+
+#search-bar input{
+    width: 100%; 
+    padding: 10px; 
+    border: none; 
+    background: transparent;
+    outline: none; 
+    font-size: 16px;
+    
+}
