--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -8,6 +9,7 @@
     height: 45px;
     border-bottom: 2px solid black;
     background: #93C398;
+    z-index: 2;
 }
 
 .navbar-right {
