--- a/src/containers/feed/feed.css
+++ b/src/containers/feed/feed.css
@@ -1,11 +1,15 @@
-*{
+.feed-root {
     margin: auto;
     padding: 0;
 }
-.post-container{
+
+.post-container {
     display: flex;
     flex-direction: column;
- }
+    justify-content: center;
+    margin: auto;
+}
+
 .individual-container{
     position: relative;
     top:100px;
@@ -18,6 +22,7 @@
     height: 700px;      
     margin-bottom: 20px; 
     padding: 10px;
+    margin: auto;
 }
 
 .sort-container{
@@ -29,7 +34,8 @@
     color: #000;
     display: flex;
     flex-direction: row;
- }
+}
+
  .sort-container span{
     flex-shrink: 0; 
     color: #000;
