--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,15 @@
 body, html {
     font-family: "Roboto", sans-serif;
     height: 100%;
-    // margin: 0;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
 }
+
+:root {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
