--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,8 +14,9 @@
     height: 30px;
     width: 100%;
     border-bottom: 2px solid black;
-    background: #93C398;
+    background: var(--green);
     z-index: 2;
+    text-decoration: none;
 }
 
 .navbar-right {
@@ -29,5 +30,12 @@
 
 .navbar-right-links {
     padding-right: 30px;
+    color: black;
+    text-decoration: none;
+}
+
+p:visited {
+    color: none;
+    text-decoration: none;
 }
 
