--- a/src/style.scss
+++ b/src/style.scss
@@ -1,15 +1,26 @@
 body, html {
     font-family: "Roboto", sans-serif;
-    height: 100%;
+    height: 100vh;
     margin: 0px;
     padding: 0px;
     width: 100%;
     height: 100%;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
+.screen {
+    height: 100vh;
+}
+
 :root {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     box-sizing: border-box;
+    --green: #93C398;
+    --lightgreen: #EFF3F0;
+    --gray: #D9D9D9;
 }
 
