--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,3 +1,7 @@
+*{
+    margin: none;
+    padding: 0;
+}
 .navbar {
     position: relative;
     display: flex;
@@ -15,8 +19,8 @@
 .navbar-right {
     display: flex;
     flex-direction: row;
+    text-align: right;
 }
-
 #navbar-friends {
     padding-left: 50px;
 }
