--- a/src/containers/feed/feed.css
+++ b/src/containers/feed/feed.css
@@ -14,12 +14,13 @@
     background: #EFF3F0;    
     border-width: 0.1rem;
     border-radius: 10px;
-    width: 900px;
-    height: 700px;      
+    width: 1200px;
+    height: 900px;      
     margin-bottom: 20px; 
     padding: 10px;
 }
 
+/* SORT  */
 .sort-container{
     position: absolute;
     width: 200px;
@@ -47,12 +48,45 @@
     border-radius: 10px;
     background: #D9D9D9;        
  }
+.sort-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.sort-opt-container{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 10px;
+    border: 2px solid #000;
+    background: #F0F0F0;
+    width: 216px;
+    height: 154px;
+    flex-shrink: 0;
+}
+#sort-options{
+    width: 200px;
+    height: 39px;
+    flex-shrink: 0;
+    color: #000;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border: none;
+    border-color: #F0F0F0;
+}
+
 
  /* FILTER CSS */
  #filter-btn-off{
     position: fixed;
     left: 0;
     top: 20%;
+    border: none;
  
  }
 
@@ -86,7 +120,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-around;
 
 }
 
@@ -98,6 +132,16 @@
     height: 145px;
     margin: 20px 20px;
    
+}
+
+.search-container img{
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+.search-container button {
+    border:none;
+    background: none;
 }
 
 #search-bar{
@@ -120,4 +164,125 @@
     outline: none; 
     font-size: 16px;
     
+}
+/* Follow buttons */
+#follow-btn{
+    border-radius: 8px;
+    border: 1px solid #000;
+    background: #93C398;
+    width: 70px;
+    height: 28px;
+    flex-shrink: 0;
+    color: #000;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    }
+
+#followed-btn{
+    width: 81px;
+    height: 28px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    border: 1px solid #000;
+    background: #D9D9D9;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: norma
+}
+
+/* upper part of the post */
+.user-information-containter{
+    display: flex;
+    flex-direction: row;
+    padding: 3% 2%;
+    height: 20%;
+}
+#profile{
+    width: 150px;
+    height: 150px;
+
+}
+.user-info-middle{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 60%;
+    height: 100%;
+}
+
+.user-info-midtop{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding-bottom: 2%;
+    
+}
+#username{
+    float: left;
+    color: #000;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    border-radius: 8px;
+    border: 1px solid #000;
+    background: #FFF;
+    flex-shrink: 0;
+    width: 100%;
+    margin-right: 100%;
+}
+#follow{
+    float: right;
+    margin-left: 100%;
+}
+.caption-containter{
+    border-radius: 8px;
+    border: 1.5px solid #000;
+    background: #FFF;
+    width: 100%;
+    height: 70%;
+    flex-shrink: 0;
+
+}
+.likes{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 10%;
+    height: 10%;
+    padding-right: 5%;
+    padding-left: 0%;
+}
+.likes button{
+    border: none;
+    background: none;
+}
+
+.likes button img{
+    width: 70%;
+    height: 70%;
+}
+.Dplan-container{
+    width: 95%;
+    height: 65%;
+    border: 1.5px solid #000;
+}
+
+.tag-container{
+    display: flex;
+    flex-direction: row;
+    padding: 1%;
+    float: left;
+}
+.tags{
+    flex-direction: row;
+    justify-content: space-around;
+    border-radius: 10px;
+    border: 1px solid #000;
+    padding: 3px;
+    margin: 5px;
 }
