--- a/src/components/termComponent/index.css
+++ b/src/components/termComponent/index.css
@@ -1,7 +1,27 @@
 .term {
     border: 2px solid rgb(0,0,20);
     margin: 15px;
-    background-color: lightgrey;
+    background-color: rgb(141, 191, 147);
+    font-family: gill sans;
+    font-weight: 600;
+    justify-content: center;
+    text-align: center;
+    border-radius: 10;
+}
+
+.termbuilder {
+    border: 2px solid rgb(6, 40, 22);
+    margin: 15px;
+    background-color: rgb(230, 243, 233);
+    font-family: gill sans;
+    font-weight: 600;
+    justify-content: center;
+    text-align: center;
+    border-radius: 15;
+
+}
+
+.text {
     font-family: gill sans;
     font-weight: 600;
     justify-content: center;
@@ -11,9 +31,10 @@
 .course {
     border: 2px solid rgb(0,0,20);
     margin: 15px;
-    background-color: lightcoral;
+    background-color: rgb(223, 148, 148);
     font-family: gill sans;
     font-weight: 600;
     justify-content: center;
     text-align: center;
+    border-radius: 15;
 }
