--- a/src/containers/friendPage/FriendsNav.css
+++ b/src/containers/friendPage/FriendsNav.css
@@ -1,16 +1,18 @@
 .fnav {
     display: flex;
     justify-content: space-around;
+    align-content: flex-start;
     background-color: #FFF;;  
-    padding: 10px 0;
-    border-bottom: 1px solid #ccc;  
+    padding-top: 10px;
+    font-weight: bolder;
+    font-size: larger;
+
   }
   
   .fnav a {
     text-decoration: none;
     color: #333;  
     padding: 10px 15px;
-    border-radius: 5px;  
     transition: background-color 0.3s;  
   }
   
@@ -19,9 +21,10 @@
   }
   
   .fnav a.active {
-    background-color: #93C398;  
-    color: white;  
+    background-color: #EFF3F0;  
+    color: rgb(0, 0, 0);  
     border-radius: 5px 5px 0 0;  
+    
   }
   
   .fnav a:not(:last-child) {
