term component integrated

--- a/src/components/termComponent/index.css
+++ b/src/components/termComponent/index.css
@@ -1,12 +1,14 @@
 .term {
     border: 2px solid rgb(0,0,20);
-    margin: 15px;
-    background-color: rgb(141, 191, 147);
+    background-color: white;
     font-family: gill sans;
     font-weight: 600;
     justify-content: center;
     text-align: center;
     border-radius: 10;
+    width: 90%;
+    height: 110px;
+    max-height: 110px;
 }
 
 .termbuilder {
@@ -28,13 +30,18 @@
     text-align: center;
 }
 
-.course {
-    border: 2px solid rgb(0,0,20);
-    margin: 15px;
-    background-color: rgb(223, 148, 148);
-    font-family: gill sans;
-    font-weight: 600;
+.course-container {
+    max-height: 80px;
+    height: 80%;
+    overflow: scroll;
+    padding: 2px;
+}
+
+.term-component-input {
+    display: flex;
+    flex-direction: row;
+    height: 20px;
+    width: 100%;
     justify-content: center;
-    text-align: center;
-    border-radius: 15;
+    padding-bottom: 5px;
 }
