--- a/src/components/courseComponent/index.css
+++ b/src/components/courseComponent/index.css
@@ -9,6 +9,11 @@
     border-radius: 10;
 }
 
+.course-individual-delete > button {
+    background-color: inherit;
+    border: none;
+}
+
 .termbuilder {
     border: 2px solid rgb(6, 40, 22);
     margin: 15px;
@@ -28,13 +33,16 @@
     text-align: center;
 }
 
-.course {
+.course-content-div {
+    margin-top: 3px;
     border: 2px solid rgb(0,0,20);
-    margin: 15px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 15px;
+    margin-right: 15px;
     background-color: rgb(223, 148, 148);
     font-family: gill sans;
     font-weight: 600;
-    justify-content: center;
-    text-align: center;
-    border-radius: 15;
+    justify-content: space-around;
+    border-radius: 15px;
 }
