--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 0;
     height: 30px;
-    width: 100%;
+    width: 100vw;
     border-bottom: 2px solid black;
     background: var(--green);
     z-index: 2;
@@ -38,4 +38,3 @@ p:visited {
     color: none;
     text-decoration: none;
 }
-
