--- a/src/components/plan/Plan.css
+++ b/src/components/plan/Plan.css
@@ -4,6 +4,14 @@ table {
     height: 100%;
 }
 
+.table-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap; 
+
+}
+
 th:not(:first-of-type) {
     width: 10%;
 }
@@ -29,6 +37,15 @@ th:first-of-type {
     background-color: var(--green);
 }
 
+td {
+    max-height: 110px;
+    overflow: hidden;
+}
+
+tr {
+    max-height: 110px;
+}
+
 .season {
     display: flex;
     align-items: center;
@@ -38,4 +55,6 @@ th:first-of-type {
     height: 25px;
     width: 90%;
     background-color: var(--green);
+    margin-left: 15px;
+    margin-right: 15px;
 }
