--- a/src/components/termBuilderComponent/index.css
+++ b/src/components/termBuilderComponent/index.css
@@ -1,7 +1,7 @@
 .term {
     border: 2px solid rgb(0,0,20);
     margin: 15px;
-    background-color: rgb(141, 191, 147);
+    background-color: white;
     font-family: gill sans;
     font-weight: 600;
     justify-content: center;
@@ -13,9 +13,9 @@
     font-size:larger;
 }
 .termbuilder {
-    border: 3px solid rgb(14, 51, 31);
+    border: 2px solid black;
     margin: 15px;
-    background-color: rgb(230, 243, 233);
+    background-color: white;
     font-family: gill sans;
     justify-content: center;
     text-align: center;
