--- a/src/style.scss
+++ b/src/style.scss
@@ -3,8 +3,12 @@ body, html {
     height: 100vh;
     margin: 0px;
     padding: 0px;
-    width: 100%;
+    width: 100vw;
     height: 100%;
+}
+
+.root-div {
+    width: 100vw;
 }
 
 button:hover {
