--- a/src/containers/feed/feed.css
+++ b/src/containers/feed/feed.css
@@ -1,12 +1,17 @@
-*{
+/* .feed-root {
     margin: auto;
     padding: 0;
-}
-.post-container{
+} */
+
+.post-container {
     display: flex;
     flex-direction: column;
- }
+    justify-content: space-between;
+    margin: auto;
+}
+
 .individual-container{
+    margin: auto;
     position: relative;
     top:100px;
     justify-content: center;
@@ -21,16 +26,18 @@
 }
 
 /* SORT  */
-.sort-container{
+.sort-container{    
     position: absolute;
     width: 200px;
     height: 39px;
     top: 5%;
-    right: 10%;
+    right:10%;
     color: #000;
     display: flex;
     flex-direction: row;
- }
+    align-items: center;
+}
+
  .sort-container span{
     flex-shrink: 0; 
     color: #000;
@@ -46,7 +53,7 @@
     height: 39px;
     flex-shrink: 0;
     border-radius: 10px;
-    background: #D9D9D9;        
+    background: #D9D9D9;      
  }
 .sort-wrapper{
     display: flex;
@@ -54,7 +61,7 @@
     justify-content: space-between;
 }
 .sort-opt-container{
-    position: relative;
+    position: absolute;
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -64,12 +71,11 @@
     background: #F0F0F0;
     width: 216px;
     height: 154px;
-    flex-shrink: 0;
+    margin-top: 55px;
 }
 #sort-options{
     width: 200px;
     height: 39px;
-    flex-shrink: 0;
     color: #000;
     font-family: Montserrat;
     font-size: 20px;
@@ -78,6 +84,8 @@
     line-height: normal;
     border: none;
     border-color: #F0F0F0;
+    margin: auto;
+    
 }
 
 
@@ -87,6 +95,7 @@
     left: 0;
     top: 20%;
     border: none;
+    background:none;
  
  }
 
@@ -97,11 +106,15 @@
 #filter-btn-on{
     position: relative;
     display: flex;
-    justify-content: flex-end;
-    left: 60%;
-    bottom: 70%;
     z-index: 2;
+    background:none;
+    border: none;
+    bottom: 70%;
+    left:100%;
+    flex-shrink: 0;
+
  }
+ 
 
 .filter-containter{
     z-index: 1;
@@ -145,6 +158,7 @@
 }
 
 #search-bar{
+    margin: auto;
     position: relative;
     border-radius: 20px;
     border: 2px solid #000;
@@ -165,13 +179,20 @@
     font-size: 16px;
     
 }
+/* filter tags */
+
+.search-result-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+}
 /* Follow buttons */
 #follow-btn{
     border-radius: 8px;
     border: 1px solid #000;
     background: #93C398;
-    width: 70px;
-    height: 28px;
+    width: 90px;
+    height: 30px;
     flex-shrink: 0;
     color: #000;
     font-family: Montserrat;
@@ -181,8 +202,8 @@
     }
 
 #followed-btn{
-    width: 81px;
-    height: 28px;
+    width: 90px;
+    height: 30px;
     flex-shrink: 0;
     border-radius: 8px;
     border: 1px solid #000;
@@ -200,44 +221,46 @@
     flex-direction: row;
     padding: 3% 2%;
     height: 20%;
+    margin: auto;
 }
 #profile{
     width: 150px;
     height: 150px;
+    flex-shrink: 0;
 
 }
 .user-info-middle{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 60%;
-    height: 100%;
+    justify-content: center;
+    width: 75%;
+    flex-shrink: 1;
+    margin-left: 20px;
 }
 
 .user-info-midtop{
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding-bottom: 2%;
+    /* border: #000 solid; */
     
 }
 #username{
-    float: left;
     color: #000;
     font-family: Montserrat;
     font-size: 14px;
-    font-style: normal;
     font-weight: 500;
     border-radius: 8px;
     border: 1px solid #000;
     background: #FFF;
     flex-shrink: 0;
-    width: 100%;
-    margin-right: 100%;
+    width: 40%;
+    padding-left: 10px;
 }
-#follow{
-    float: right;
-    margin-left: 100%;
+.follow{
+    padding-left: 45%;
+
 }
 .caption-containter{
     border-radius: 8px;
@@ -251,11 +274,9 @@
 .likes{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    width: 10%;
-    height: 10%;
-    padding-right: 5%;
-    padding-left: 0%;
+    align-items: center;
+    margin: auto;
+    
 }
 .likes button{
     border: none;
@@ -267,16 +288,18 @@
     height: 70%;
 }
 .Dplan-container{
+    margin: auto;
     width: 95%;
     height: 65%;
-    border: 1.5px solid #000;
 }
 
 .tag-container{
     display: flex;
     flex-direction: row;
     padding: 1%;
-    float: left;
+    /* float: left; */
+    margin-left: auto;
+    align-items: center;
 }
 .tags{
     flex-direction: row;
