--- a/src/containers/feed/feed.css
+++ b/src/containers/feed/feed.css
@@ -1,7 +1,7 @@
-*{
+.feed-root{
     margin: auto;
     padding: 0;
-}
+} 
 .post-container{
     display: flex;
     flex-direction: column;
@@ -31,6 +31,7 @@
     color: #000;
     display: flex;
     flex-direction: row;
+    align-items: center;
  }
  .sort-container span{
     flex-shrink: 0; 
@@ -111,7 +112,7 @@
  
 
 .filter-containter{
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     top:0;
     width: 20%;
