booleans for editstatus

--- a/src/containers/feed/feed.css
+++ b/src/containers/feed/feed.css
@@ -48,7 +48,8 @@
     height: 39px;
     flex-shrink: 0;
     border-radius: 10px;
-    background: #D9D9D9;      
+    background: #D9D9D9; 
+    border-color: #D9D9D9 ;
  }
 .sort-wrapper{
     display: flex;
@@ -63,13 +64,13 @@
     justify-content: space-around;
     border-radius: 10px;
     border: 2px solid #000;
-    background: #F0F0F0;
+    background: #F0F0F0;;
     width: 216px;
     height: 154px;
     margin-top: 55px;
 }
 #sort-options{
-    width: 200px;
+    width: 215px;
     height: 39px;
     color: #000;
     font-family: Montserrat;
@@ -80,7 +81,15 @@
     border: none;
     border-color: #F0F0F0;
     margin: auto;
+    background-color: transparent;
     
+}
+#sort-btn:hover{
+    box-shadow: 0 0 10px #666666; /* Example shadow */
+    background: #D9D9D9;
+}
+#sort-options:hover{
+    background-color: #D9D9D9;
 }
 
 
@@ -276,6 +285,10 @@
     border: none;
     background: none;
 }
+/* .likes button img:hover{
+    box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.2);
+    background-color: #93C398;
+} */
 
 .likes button img{
     width: 70%;
