--- a/src/containers/friendPage/FriendsNav.css
+++ b/src/containers/friendPage/FriendsNav.css
@@ -1,6 +1,12 @@
+.container {
+  border: 4px solid #000;
+  position: relative; /* Make sure this is here to position children relative to this container */
+  z-index: 1; /* Lower z-index so that active tab appears above the border */
+}
+
 .fnav {
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-content: flex-start;
     background-color: #FFF;;  
     padding-top: 0px;
@@ -11,9 +17,18 @@
   
   .fnav a {
     text-decoration: none;
+    border-radius: 10px 10px 0px 0px;
     color: #333;  
     padding: 10px 15px;
+    font-weight: bolder;
+    margin-right: 10px;
+    padding-right: 40px;
+    padding-left: 40px;
+    border-top: 4px solid #000;    
+    border-left: 4px solid #000;    
+    border-right: 4px solid #000;    
     transition: background-color 0.3s;  
+    background-color: #93C398;
   }
   
   .fnav a:hover {
@@ -21,13 +36,20 @@
   }
   
   .fnav a.active {
-    background-color: #EFF3F0;  
-    color: rgb(0, 0, 0);  
-    border-radius: 5px 5px 0 0;  
-    
-  }
+    background-color: #EFF3F0;
+    color: rgb(0, 0, 0);
+
+    border-top: 4px solid #000;    
+    border-left: 4px solid #000;    
+    border-right: 4px solid #000;    
+
+    margin-bottom: -4px; /* This will pull the active tab down to cover the container's top border */
+    position: relative; /* Use relative positioning to move the active tab */
+    z-index: 2; /* This ensures that the active tab stacks above the container border */
+    }
   
   .fnav a:not(:last-child) {
-    margin-right: 4px; 
+    margin-right: 9px;
   }
+  
   
