--- a/src/components/plan2/Plan23.css
+++ b/src/components/plan2/Plan23.css
@@ -1,3 +1,11 @@
 .holder {
-    border: 3px solid red;
+    border: 3px solid rgb(255, 213, 121);
+}
+
+.term-rows {
+    background-color: inherit;
+}
+
+.table-container {
+    background-color: inherit;
 }
