most up to date

--- a/src/components/plan2/Plan2.css
+++ b/src/components/plan2/Plan2.css
@@ -4,6 +4,9 @@
 
 .term-rows {
     background-color: inherit;
+    margin: none;
+    padding: none;
+    max-height: 140px;
 }
 
 .table-container {
