--- a/src/components/courseComponent/index.css
+++ b/src/components/courseComponent/index.css
@@ -38,11 +38,24 @@
     border: 2px solid rgb(0,0,20);
     display: flex;
     flex-direction: row;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
     background-color: rgb(223, 148, 148);
     font-family: gill sans;
     font-weight: 600;
     justify-content: space-around;
-    border-radius: 15px;
+    border-radius: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
+    max-height: 20px;
+    overflow: scroll;
+}
+
+.course-individual-delete {
+    display: flex;
+    align-items: center;
+}
+
+.course-description {
+    font-size: 13px;
 }
