--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -10,14 +10,23 @@
   background-color: rgba(0,0,0,0.4);  
   padding-top: 50px;  
 }
+
+.profile-container.open {
+  display: block;
+}
  
 .profile-container {
-  background-color: #fefefe;
+  border-right: 2px solid black;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  left: 0;
+  background-color: var(--green);
   margin: 0 0;  
   padding: 0px;
-  width: 80%;  
-  max-width: 600px;  
-  border-radius: 10px;  
+  width: 30%;  
+  height: 100%;
+  max-width: 600px;
   box-sizing: border-box;  
 }
  
