--- a/src/containers/homepage/Homepage.css
+++ b/src/containers/homepage/Homepage.css
@@ -152,6 +152,11 @@
     position: relative;
 }
 
+.potential-wrapper {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 .homepage-main-container {
     display: flex;
     flex-direction: row;
