--- a/src/style.scss
+++ b/src/style.scss
@@ -26,5 +26,11 @@ button:hover {
     --green: #93C398;
     --lightgreen: #EFF3F0;
     --gray: #D9D9D9;
+    --track0: #F4C4C4;
+    --track1: #D4CCF3;
+    --track2: #C8DEED;
+    --color0: #93C398;
+    --color1: #EFF3F0;
+    --color2: #D9D9D9;
 }
 
