--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,7 +14,7 @@
     padding-right: 20px;
     height: 30px;
     border-bottom: 2px solid black;
-    background: var(--green);
+    background: var(--color0);
     z-index: 1;
     text-decoration: none;
     width:100vw;
