--- a/src/components/plan/Plan.css
+++ b/src/components/plan/Plan.css
@@ -34,7 +34,7 @@ th:first-of-type {
 .year-column {
     width: 50%;
     min-width: 30px;
-    background-color: var(--green);
+    background-color: var(--color0);
 }
 
 td {
@@ -54,7 +54,7 @@ tr {
     border: 2px solid black;
     height: 25px;
     width: 90%;
-    background-color: var(--green);
+    background-color: var(--color0);
     margin-left: 15px;
     margin-right: 15px;
 }
