--- a/src/containers/homepage/Homepage.css
+++ b/src/containers/homepage/Homepage.css
@@ -3,23 +3,39 @@
     flex-direction: row;
 }
 
+.term-draft-class-container {
+    padding-top: 5px;
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.term-name-wrapper {
+    margin: auto;
+}
+
 .term-draft {
     border: 2px solid black;
     background-color: white;
-    width: 40%;
-    height: 40%;
+    width: 150px;
+    height: 200px;
+    min-width: 150px;
+    min-height: 200px;
     margin: 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
 }
 
 .term-draft-button {
     border: 2px solid black;
     background-color: white;
-    width: 40%;
-    height: 40%;
+    width: 150px;
+    height: 200px;
     margin: 10px;
     border-radius: 10px;
     display: flex;
@@ -55,7 +71,7 @@
     padding-bottom: 2px;
     padding-left: 5px;
     padding-right: 5px;
-    width: 70%;
+    width: 80%;
     background-color: var(--gray);
     border: 2px solid black;
     border-radius: 10px;
@@ -91,21 +107,58 @@
     min-width: 120px;
 }
 
+.editing-term-class-display {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 4px;
+}
 
+.editing-term-add-class-input {
+    display: flex;
+    margin-left: 7px;
+    margin-right: 7px;
+    margin-bottom: 5px;
+}
+
+.editing-term-class-container {
+    width: 90%;
+    margin-bottom: 7px;
+    height: 60%;
+}
+
+.content-term-name {
+    display: flex;
+}
+
+.editing-term-class-display > button {
+    width: 20px;
+    height: 20px;
+}
 
 .term-draft-button > p {
     text-align: center;
 }
 
-
+.editing-term-content {
+    margin-top: 7px;
+    margin-bottom: 7px;
+    text-align: center;
+    font-size: 18px;
+}
 
 
 .editing-term {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 2px solid black;
     background-color: white;
     border-radius: 10px; 
-    height: 60%;
-    width: 60%;
+    height: 70%;
+    min-height: 70%;
+    width: 70%;
+    min-width: 70%;
     margin: 30px;
 }
 
@@ -205,6 +258,7 @@
     border-bottom: none;
     padding-left: 5px;
     padding-right: 5px;
+    background-color: var(--color0);
 }
 
 .plan-container2 {
@@ -407,4 +461,11 @@
 }
 .track2 {
     background-color: var(--track2);
+}
+
+.button-holder-add-term {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 10px;
 }
