--- a/src/containers/homepage/Homepage.css
+++ b/src/containers/homepage/Homepage.css
@@ -276,6 +276,8 @@
     border-radius: 10px;
     width: 100%;
     height: 80%;
+    max-height: 80%;
+    overflow-y:auto;
     background-color: var(--lightgreen);
     margin-bottom: 7px;
 }
