--- a/src/components/courseComponent/index.css
+++ b/src/components/courseComponent/index.css
@@ -48,6 +48,7 @@
     padding-left: 5px;
     padding-right: 5px;
     height: 1.2rem;
+    overflow: hidden;
 }
 .course-individual-delete {
     display: flex;
