--- a/src/containers/homepage/Homepage.css
+++ b/src/containers/homepage/Homepage.css
@@ -281,6 +281,7 @@
 }
 
 .major-edit-toggle {
+    width: 40%;
     background-color: var(--gray);
     padding-left: 20px;
     padding-right: 20px;
@@ -288,6 +289,7 @@
     padding-bottom: 3px;
     border: 2px solid black;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .major-editing-container {
