--- a/src/containers/friendPage/FriendsNav.css
+++ b/src/containers/friendPage/FriendsNav.css
@@ -1,9 +1,26 @@
 .container {
-  border: 4px solid #000;
+  border: 2px solid #000;
   position: relative; /* Make sure this is here to position children relative to this container */
   z-index: 1; /* Lower z-index so that active tab appears above the border */
+  overflow-y: scroll;
 }
+.friends-parent-container{
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(3, 1fr); 
+  grid-gap: 2rem; 
+  padding: 20px; 
+  @media (min-width: 300px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  @media (min-width: 700px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 1000px) {
+    grid-template-columns: repeat(3, 1fr); /* 3 columns for large screens */
+  }
 
+}
 .fnav {
     display: flex;
     /* justify-content: space-around; */
@@ -24,9 +41,9 @@
     margin-right: 10px;
     padding-right: 40px;
     padding-left: 40px;
-    border-top: 4px solid #000;    
-    border-left: 4px solid #000;    
-    border-right: 4px solid #000;    
+    border-top: 3px solid #000;    
+    border-left: 3px solid #000;    
+    border-right: 3px solid #000;    
     transition: background-color 0.3s;  
     background-color: #93C398;
   }
@@ -39,9 +56,9 @@
     background-color: #EFF3F0;
     color: rgb(0, 0, 0);
 
-    border-top: 4px solid #000;    
-    border-left: 4px solid #000;    
-    border-right: 4px solid #000;    
+    border-top: 2px solid #000;    
+    border-left: 2px solid #000;    
+    border-right: 2px solid #000;    
 
     margin-bottom: -4px; /* This will pull the active tab down to cover the container's top border */
     position: relative; /* Use relative positioning to move the active tab */
