--- a/src/containers/friendPage/FriendsPage.css
+++ b/src/containers/friendPage/FriendsPage.css
@@ -2,16 +2,17 @@
     border: 4px solid #000;
     position: relative;
     z-index: 1;
-    padding: 20px;
-  }
+    padding: 20px; 
+    height: 57rem;
+}
   
-  .fnav {
+.fnav {
     display: flex;
     background-color: #FFF;
     font-weight: bolder;
     font-size: larger;
-    margin-bottom: 20px;
-  }
+    margin-bottom: 0px;
+}
   
   .fnav a {
     text-decoration: none;
@@ -22,7 +23,7 @@
     margin-right: 10px;
     transition: background-color 0.3s;
     background-color: #93C398;
-    border: 4px solid #000;
+    border: 2px solid #000;
   }
   
   .fnav a:hover {
@@ -35,6 +36,7 @@
     margin-bottom: -4px;
     position: relative;
     z-index: 2;
+    border-bottom: 3px #EFF3F0 solid ;
   }
   
   .friends-container {
@@ -49,6 +51,7 @@
   .friends-page {
     background-color: #EFF3F0;
     margin: 20px;
+    height: 60rem;
   }
   
   .search-bar {
